Documentation starting the process of documentation on the read me and the contributing files.

--- a/src/Avatar/index.html
+++ b/src/Avatar/index.html
@@ -72,7 +72,8 @@
         </div>
 
     </div>
-
+    <script src="../scripts/Checker.js"></script>
+    <script src="scripts/lesson-avatar.js"></script>
 </body>
 
 </html>
