--- a/src/Avatar/aang.html
+++ b/src/Avatar/aang.html
@@ -49,20 +49,32 @@
         </div>
         <img src="images/aang.png" alt="Aang">
         <h1 class="character_name">Aang</h1>
-        <p>Aang was a male Air Nomad born in 12 BG and the Avatar during the century-long conflict known as the Hundred Year
-            War. His immediate predecessor was Avatar Roku,[6] and his immediate successor is Avatar Korra. As the Avatar
-            of his time, he was the only person capable of using all four bending arts: airbending, waterbending, earthbending,
-            and firebending. He was also one of a select few Avatars, and one of the first in many cycles[7] to learn the
+        <p>Aang was a male Air Nomad born in 12 BG and the Avatar during the century-long conflict known as the Hundred
+            Year
+            War. His immediate predecessor was Avatar Roku,[6] and his immediate successor is Avatar Korra. As the
+            Avatar
+            of his time, he was the only person capable of using all four bending arts: airbending, waterbending,
+            earthbending,
+            and firebending. He was also one of a select few Avatars, and one of the first in many cycles[7] to learn
+            the
             ancient art of energybending, and the first Avatar known to have actively used the technique.</p>
 
-        <p>Shortly before the beginning of the Hundred Year War, Aang was frozen in an iceberg for a hundred years; he later
-            emerged, still biologically twelve years old, into a world engulfed by war.[8] During his absence, the Fire Nation
-            had waged war upon the other nations and managed to completely wipe out the pacifistic Air Nomads. It fell to
-            Aang, the last airbender and the Avatar, to end the War by mastering the other three elements and defeating Fire
-            Lord Ozai. He remained a kind and goofy kid at heart throughout his year-long struggle, despite the overwhelming
-            loss of his people and the heavy burdens he was forced to bear. After his victory over the Phoenix King, Aang
-            began a romantic relationship with his close friend, Katara.[9] The couple eventually married and raised a family
-            of three children: Bumi, a nonbender who became an airbender later in life, Kya, a waterbender, and the youngest,
+        <p>Shortly before the beginning of the Hundred Year War, Aang was frozen in an iceberg for a hundred years; he
+            later
+            emerged, still biologically twelve years old, into a world engulfed by war.[8] During his absence, the Fire
+            Nation
+            had waged war upon the other nations and managed to completely wipe out the pacifistic Air Nomads. It fell
+            to
+            Aang, the last airbender and the Avatar, to end the War by mastering the other three elements and defeating
+            Fire
+            Lord Ozai. He remained a kind and goofy kid at heart throughout his year-long struggle, despite the
+            overwhelming
+            loss of his people and the heavy burdens he was forced to bear. After his victory over the Phoenix King,
+            Aang
+            began a romantic relationship with his close friend, Katara.[9] The couple eventually married and raised a
+            family
+            of three children: Bumi, a nonbender who became an airbender later in life, Kya, a waterbender, and the
+            youngest,
             Tenzin, an airbender.</p>
     </div>
 </body>
