Updating files to reflect new location As well as updating based on our new formatting standards

--- a/src/Projects/Avatar/index.html
+++ b/src/Projects/Avatar/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Welcome to my Starter Setup</title>
+    <link rel="stylesheet" href="styles/styles.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Welcome to my Starter Setup</title>
-  <link rel="stylesheet" href="styles/styles.css">
-</head>
+  <body>
+    <div class="wrapper"></div>
 
-<body>
-  <div class="wrapper"></div>
-
-  <script src="../scripts/Checker.js"></script>
-  <script src="scripts/lesson-avatar.js"></script>
-</body>
-
+    <script src="scripts/Checker.js"></script>
+    <script src="scripts/lesson-avatar.js"></script>
+  </body>
 </html>
