--- a/src/index.html
+++ b/src/index.html
@@ -1,26 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Pick a path</title>
-    <link rel="stylesheet" href="styles/styles.css">
-</head>
+    <link rel="stylesheet" href="styles/styles.css" />
+  </head>
 
-<body>
+  <body>
     <ul>
-        <li>
-            <a href="/Avatar/index.html">Avatar</a>
-        </li>
-        <li>
-            <a href="/MovieList/index.html">Movie List</a>
-        </li>
-        <li>
-            <a href="/MusicList/index.html">Music List</a>
-        </li>
+      <li><a href="/Projects/Avatar/index.html">Avatar</a></li>
+      <li><a href="/Projects/MovieList/index.html">Movie List</a></li>
+      <li><a href="/Projects/MusicList/index.html">Music List</a></li>
     </ul>
-</body>
-
+  </body>
 </html>
