--- a/src/StudentLandingPage.html
+++ b/src/StudentLandingPage.html
@@ -1,76 +1,101 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel="stylesheet" href="html-css/global.css">
-  <link rel="stylesheet" href="html-css/header.css">
-  <link rel="stylesheet" href="html-css/footer.css">
-  <link rel="stylesheet" href="html-css/studentLandingPage.css">
-  <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=BioRhyme" rel="stylesheet">
-</head>
-<body>
+  <head>
+    <link rel="stylesheet" href="styles/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=BioRhyme" rel="stylesheet">
+  </head>
+  <body>
 
-<div class="header">
-  <img class="logo" src="images/cpblogo.png" alt="Code Palm Beach Logo">
-  <span>Code Palm Beach</span>
-  <span class="top-nav">
-      <a class="nav-item">Typer</a>
-      <a class="nav-item">Code Checker</a>
-      <a class="nav-item">Resources</a>
-      <a class="nav-item">Events</a>
-   </span>
-  <span>
-     <a href=#><img class="profile-icon" src="images/profile.svg"></a>
-   </span>
-</div>
+    <header class="header">
+      <div class="logo-area">
+        <img class="logo" src="images/cpblogo.png" alt="Code Palm Beach Logo">
+        <h1 class='site-title'>Code Palm Beach</h1>
+      </div>
+      <!-- /.logo-area -->
 
-<div>
-  <div class="title">Let's Learn To Code</div>
-  <div class="subtitle">CodeChecker is a tool to help you learn HTML, CSS, and JavaScript.<br/>
-    There are a lot of rules and syntax you need to get used to and here you can practice.</div>
-  <br/>
+      <nav class="top-nav">
+        <a class="top-nav__item">Typer</a>
+        <a class="top-nav__item">Code Checker</a>
+        <a class="top-nav__item">Resources</a>
+        <a class="top-nav__item">Events</a>
+      </nav>
+      <!-- /.top-nav -->
 
-  <div class="box-wrapper">
-    <ul class="box-list">
-      <li class="boxed">
-        <div>
-          <img class="icon" src="images/skeleton.svg">
-          <img class="icon" src="images/vampire.svg">
-        </div>
-        <div>
-        <span class="btn">
-          <a class="html-css-btn">HTML AND CSS</a>
-        </span>
-        </div>
-      </li>
-      <li class="boxed">
-        <div>
-          <img class="icon" src="images/frankenstein.svg">
-        </div>
-        <div>
-        <span class="btn">
-          <a class="js-btn">JAVASCRIPT</a>
-      </span>
+      <div class="header-profile">
+        <a href="#"><img class="profile-icon" src="images/profile.svg"></a>
+      </div>
+      <!-- /.header-profile -->
+    </header>
+
+    <main class="page">
+      <div class="page-topper">
+        <h2 class="page__title">Let's Learn to Code</h2>
+        <h3 class="page__sub-title">CodeChecker is a tool to help you learn HTML, CSS, and JavaScript.<br/>
+          There are a lot of rules and syntax you need to get used to and here you can practice.</h3>
+      </div>
+      <!-- /.page-topper -->
+
+      <div class="lessons">
+        <div class="lesson">
+          <div class="lesson__header">
+            <img class="lesson__icon" src="images/skeleton.svg">
+            <img class="lesson__icon" src="images/vampire.svg">
           </div>
-      </li>
-    </ul>
-  </div>
-</div>
+          <!-- /.lesson__header -->
+          <div class="lesson__body">
+            <span class="btn">
+              <a class="html-css-btn">HTML AND CSS</a>
+            </span>
+          </div>
+          <!-- /.lesson__body -->
+        </div>
+        <!-- /.lesson -->
 
-<div class="footer-container">
-  <div class="footer-div">
-    <div class="footer-information">
-      <p class="footer-col"><span class="footer-col-title"><b>About Code Palm Beach</b></span> <br>Lorem ipsum dolor<br>Lorem ipsum dolor</p>
-      <p class="footer-col"><span class="footer-col-title"><b>Products and Features</b></span> <br>Lorem ipsum dolor<br>Lorem ipsum dolor</p>
-      <p class="footer-col"><span class="footer-col-title"><b>Schools and Educators</b></span> <br>Lorem ipsum dolor<br>Lorem ipsum dolor</p>
-    </div>
-  </div>
-  <div class="icon-div">
-    <a href="https://www.linkedin.com/in/codepalmbeach" target="_blank"><img class="social-icon" src="images/linkedin.svg"></a>
-    <a href="https://www.twitter.com/codepalmbeach" target="_blank"><img class="social-icon" src="images/twitter.svg"></a>
-    <a href="https://www.facebook.com/codepalmbeach/" target="_blank"><img class="social-icon"src="images/facebook.svg"></a>
-  </div>
-</div>
+        <div class="lesson">
+          <div class="lesson__header">
+            <img class="lesson__icon" src="images/frankenstein.svg">
+          </div>
+          <!-- /.lesson__header -->
+          <div class="lesson__body">
+            <span class="btn">
+              <a class="js-btn">HTML AND CSS</a>
+            </span>
+          </div>
+          <!-- /.lesson__body -->
+        </div>
+        <!-- /.lesson -->
+      </div>
+      <!-- /.lessons -->
+    </main>
+    <!-- /.page -->
 
-</body>
+    <footer class="footer-container">
+      <div class="footer-div">
+        <div class="footer-information">
+          <p class="footer-col">
+            <span class="footer-col-title">
+              <b>About Code Palm Beach</b>
+            </span>
+            <br>Lorem ipsum dolor<br>Lorem ipsum dolor</p>
+          <p class="footer-col">
+            <span class="footer-col-title">
+              <b>Products and Features</b>
+            </span>
+            <br>Lorem ipsum dolor<br>Lorem ipsum dolor</p>
+          <p class="footer-col">
+            <span class="footer-col-title">
+              <b>Schools and Educators</b>
+            </span>
+            <br>Lorem ipsum dolor<br>Lorem ipsum dolor</p>
+        </div>
+      </div>
+      <div class="icon-div">
+        <a href="https://linkedin.com/in/codepalmbeach" target="_blank"><img class="social-icon" src="images/linkedin.svg"></a>
+        <a href="https://twitter.com/codepalmbeach" target="_blank"><img class="social-icon" src="images/twitter.svg"></a>
+        <a href="https://facebook.com/codepalmbeach/" target="_blank"><img class="social-icon" src="images/facebook.svg"></a>
+      </div>
+    </footer>
+
+  </body>
 </html>
