--- a/src/StudentLandingPage.html
+++ b/src/StudentLandingPage.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=BioRhyme" rel="stylesheet">
+    <title>Code Plam Beach | Checker</title>
   </head>
   <body>
 
@@ -28,10 +30,10 @@
       <!-- /.header-profile -->
     </header>
 
-    <main class="page">
-      <div class="page-topper">
-        <h2 class="page__title">Let's Learn to Code</h2>
-        <h3 class="page__sub-title">CodeChecker is a tool to help you learn HTML, CSS, and JavaScript.<br/>
+    <main class="page-wrapper">
+      <div class="page-info">
+        <h2 class="page-info__title">Let's Learn to Code</h2>
+        <h3 class="page-info__sub-title">CodeChecker is a tool to help you learn HTML, CSS, and JavaScript.<br/>
           There are a lot of rules and syntax you need to get used to and here you can practice.</h3>
       </div>
       <!-- /.page-topper -->
@@ -44,9 +46,7 @@
           </div>
           <!-- /.lesson__header -->
           <div class="lesson__body">
-            <span class="btn">
-              <a class="html-css-btn">HTML AND CSS</a>
-            </span>
+            <a class="btn -html">HTML & CSS</a>
           </div>
           <!-- /.lesson__body -->
         </div>
@@ -58,9 +58,7 @@
           </div>
           <!-- /.lesson__header -->
           <div class="lesson__body">
-            <span class="btn">
-              <a class="js-btn">HTML AND CSS</a>
-            </span>
+            <a class="btn -js">JavaScript</a>
           </div>
           <!-- /.lesson__body -->
         </div>
@@ -70,31 +68,46 @@
     </main>
     <!-- /.page -->
 
-    <footer class="footer-container">
-      <div class="footer-div">
-        <div class="footer-information">
-          <p class="footer-col">
-            <span class="footer-col-title">
-              <b>About Code Palm Beach</b>
-            </span>
-            <br>Lorem ipsum dolor<br>Lorem ipsum dolor</p>
-          <p class="footer-col">
-            <span class="footer-col-title">
-              <b>Products and Features</b>
-            </span>
-            <br>Lorem ipsum dolor<br>Lorem ipsum dolor</p>
-          <p class="footer-col">
-            <span class="footer-col-title">
-              <b>Schools and Educators</b>
-            </span>
-            <br>Lorem ipsum dolor<br>Lorem ipsum dolor</p>
+    <footer class="footer">
+
+      <div class="footer-cols">
+        <div class="footer-col">
+          <h5 class="footer-col__title">About Code Palm Beach</h5>
+          <a href="#" class="footer-col__link">Lorem Ipsum Dolor</a>
+          <a href="#" class="footer-col__link">Lorem Ipsum Dolor</a>
         </div>
+        <!-- /.footer-col -->
+
+        <div class="footer-col">
+          <h5 class="footer-col__title">Products and Features</h5>
+          <a href="#" class="footer-col__link">Lorem Ipsum Dolor</a>
+          <a href="#" class="footer-col__link">Lorem Ipsum Dolor</a>
+        </div>
+        <!-- /.footer-col -->
+
+        <div class="footer-col">
+          <h5 class="footer-col__title">Schools and Educators</h5>
+          <a href="#" class="footer-col__link">Lorem Ipsum Dolor</a>
+          <a href="#" class="footer-col__link">Lorem Ipsum Dolor</a>
+        </div>
+        <!-- /.footer-col -->
+
       </div>
-      <div class="icon-div">
-        <a href="https://linkedin.com/in/codepalmbeach" target="_blank"><img class="social-icon" src="images/linkedin.svg"></a>
-        <a href="https://twitter.com/codepalmbeach" target="_blank"><img class="social-icon" src="images/twitter.svg"></a>
-        <a href="https://facebook.com/codepalmbeach/" target="_blank"><img class="social-icon" src="images/facebook.svg"></a>
+      <!-- /.footer-infomation -->
+
+      <div class="social-icons">
+        <a href="https://facebook.com/codepalmbeach" class="social-icon" target="_blank">
+          <img class="social-icon" src="images/facebook.svg">
+        </a>
+        <a href="https://twitter.com/codepalmbeach" class="social-icon" target="_blank">
+          <img class="social-icon" src="images/twitter.svg">
+        </a>
+        <a href="https://linkedin.com/in/codepalmbeach" class="social-icon" target="_blank">
+          <img class="social-icon" src="images/linkedin.svg">
+        </a>
       </div>
+      <!-- /.social-icons -->
+
     </footer>
 
   </body>
