Starting new movie list project

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
           </div>
           <!-- /.lesson__header -->
           <div class="lesson__body">
-            <a href="#" class="btn -beginner">Avatar: The Last Airbender</a>
+            <a href="Projects/Avatar/index.html" class="btn -beginner">Avatar: The Last Airbender</a>
           </div>
           <!-- /.lesson__body -->
         </div>
@@ -57,7 +57,7 @@
           </div>
           <!-- /.lesson__header -->
           <div class="lesson__body">
-            <a href="#" class="btn -beginner">Movie List</a>
+            <a href="Projects/Movie/index.html" class="btn -beginner">Movie List</a>
           </div>
           <!-- /.lesson__body -->
         </div>
@@ -69,7 +69,7 @@
           </div>
           <!-- /.lesson__header -->
           <div class="lesson__body">
-            <a href="#" class="btn -beginner">Music List</a>
+            <a href="Projects/Music/index.html" class="btn -beginner">Music List</a>
           </div>
           <!-- /.lesson__body -->
         </div>
