Setting up a new Movie List project. Added starter lesson files. Renamed a couple of images for clarity sake. Updated the styles to utilize flexbox

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
           </div>
           <!-- /.lesson__header -->
           <div class="lesson__body">
-            <a href="Projects/Movie/index.html" class="btn -beginner">Movie List</a>
+            <a href="Projects/MovieList/index.html" class="btn -beginner">Movie List</a>
           </div>
           <!-- /.lesson__body -->
         </div>
@@ -69,7 +69,7 @@
           </div>
           <!-- /.lesson__header -->
           <div class="lesson__body">
-            <a href="Projects/Music/index.html" class="btn -beginner">Music List</a>
+            <a href="Projects/MusicList/index.html" class="btn -beginner">Music List</a>
           </div>
           <!-- /.lesson__body -->
         </div>
