Finalizing Basic Robot

--- a/src/Projects/BasicRobot/index.html
+++ b/src/Projects/BasicRobot/index.html
@@ -13,16 +13,16 @@
       <div class="robot">
         <div class="antenna"></div>
         <div class="head">
-          <!-- <div class="eye eye-left"></div> -->
-          <!-- <div class="eye eye-right"></div> -->
-          <!-- <div class="mouth"></div> -->
+          <div class="eye-left"></div>
+          <div class="eye-right"></div>
+          <div class="mouth"></div>
         </div>
-        <!-- <div class="body"> -->
-        <!-- <div class="arm arm-left"></div> -->
-        <!-- <div class="arm arm-right"></div> -->
-        <!-- <div class="bolt"></div> -->
-        <!-- </div> -->
-        <!-- <div class="bottom"></div> -->
+        <div class="body">
+          <div class="arm-left"></div>
+          <div class="arm-right"></div>
+          <div class="bolt"></div>
+        </div>
+        <div class="bottom"></div>
       </div>
     </div>
 
