Forgot to clear starter file

--- a/src/Projects/BasicRobot/index.html
+++ b/src/Projects/BasicRobot/index.html
@@ -9,22 +9,7 @@
   </head>
 
   <body>
-    <div class="wrapper">
-      <div class="robot">
-        <div class="antenna"></div>
-        <div class="head">
-          <div class="eye-left"></div>
-          <div class="eye-right"></div>
-          <div class="mouth"></div>
-        </div>
-        <div class="body">
-          <div class="arm-left"></div>
-          <div class="arm-right"></div>
-          <div class="bolt"></div>
-        </div>
-        <div class="bottom"></div>
-      </div>
-    </div>
+    <div class="wrapper"></div>
 
     <script src="scripts/Checker.js"></script>
     <script src="scripts/lesson-basic-robot.js"></script>
