--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles/styles.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="styles/styles.css" />
     <title>Code Plam Beach | Checker</title>
   </head>
   <body>
-
     <header class="header">
       <div class="logo-area">
-        <img class="logo" src="images/cpblogo.png" alt="Code Palm Beach Logo">
-        <h1 class='site-title'>Code Palm Beach</h1>
+        <img class="logo" src="images/cpblogo.png" alt="Code Palm Beach Logo" />
+        <h1 class="site-title">Code Palm Beach</h1>
       </div>
       <!-- /.logo-area -->
 
@@ -25,7 +24,7 @@
       <!-- /.top-nav -->
 
       <div class="header-profile">
-        <a href="#"><img class="profile-icon" src="images/profile.svg"></a>
+        <a href="#"><img class="profile-icon" src="images/profile.svg"/></a>
       </div>
       <!-- /.header-profile -->
     </header>
@@ -33,15 +32,17 @@
     <main class="page-wrapper">
       <div class="page-info">
         <h2 class="page-info__title">Let's Learn to Code</h2>
-        <h3 class="page-info__sub-title">CodeChecker is a tool to help you learn HTML, CSS, and JavaScript.<br/>
-          There are a lot of rules and syntax you need to get used to and here you can practice.</h3>
+        <h3 class="page-info__sub-title">
+          CodeChecker is a tool to help you learn HTML, CSS, and JavaScript.<br />
+          There are a lot of rules and syntax you need to get used to and here you can practice.
+        </h3>
       </div>
       <!-- /.page-topper -->
 
       <div class="lessons">
         <div class="lesson">
           <div class="lesson__header">
-            <img class="lesson__icon" src="./images/projects/aang.png" alt="Avatar: The Last Airbender">
+            <img class="lesson__icon" src="./images/projects/aang.png" alt="Avatar: The Last Airbender" />
           </div>
           <!-- /.lesson__header -->
           <div class="lesson__body">
@@ -53,7 +54,7 @@
 
         <div class="lesson">
           <div class="lesson__header">
-            <img class="lesson__icon" src="./images/projects/star_wars.jpg">
+            <img class="lesson__icon" src="./images/projects/star_wars.jpg" />
           </div>
           <!-- /.lesson__header -->
           <div class="lesson__body">
@@ -65,7 +66,7 @@
 
         <div class="lesson">
           <div class="lesson__header">
-            <img class="lesson__icon" src="./images/projects/sia.jpg">
+            <img class="lesson__icon" src="./images/projects/sia.jpg" />
           </div>
           <!-- /.lesson__header -->
           <div class="lesson__body">
@@ -74,14 +75,12 @@
           <!-- /.lesson__body -->
         </div>
         <!-- /.lesson -->
-
       </div>
       <!-- /.lessons -->
     </main>
     <!-- /.page -->
 
     <footer class="footer">
-
       <div class="footer-cols">
         <div class="footer-col">
           <h5 class="footer-col__title">About Code Palm Beach</h5>
@@ -103,24 +102,21 @@
           <a href="#" class="footer-col__link">Lorem Ipsum Dolor</a>
         </div>
         <!-- /.footer-col -->
-
       </div>
       <!-- /.footer-infomation -->
 
       <div class="social-icons">
         <a href="https://facebook.com/codepalmbeach" class="social-icon" target="_blank">
-          <img class="social-icon" src="images/facebook.svg">
+          <img class="social-icon" src="images/facebook.svg" />
         </a>
         <a href="https://twitter.com/codepalmbeach" class="social-icon" target="_blank">
-          <img class="social-icon" src="images/twitter.svg">
+          <img class="social-icon" src="images/twitter.svg" />
         </a>
         <a href="https://linkedin.com/in/codepalmbeach" class="social-icon" target="_blank">
-          <img class="social-icon" src="images/linkedin.svg">
+          <img class="social-icon" src="images/linkedin.svg" />
         </a>
       </div>
       <!-- /.social-icons -->
-
     </footer>
-
   </body>
 </html>
