--- a/src/Projects/Bunny/index.html
+++ b/src/Projects/Bunny/index.html
@@ -21,17 +21,20 @@
           </div>
           <div class="mouth"></div>
         </div>
-        <div class="body">
-          <div class="arms">
-            <div class="arm-left"></div>
-            <div class="arm-right"></div>
-          </div>
-          <div class="feet">
-            <div class="foot-left"></div>
-            <div class="foot-right"></div>
-          </div>
-        </div>
+        <!-- <div class="body"> -->
+        <!-- <div class="arms"> -->
+        <!-- <div class="arm-left"></div> -->
+        <!-- <div class="arm-right"></div> -->
+        <!-- </div> -->
+        <!-- <div class="feet"> -->
+        <!-- <div class="foot-left"></div> -->
+        <!-- <div class="foot-right"></div> -->
+        <!-- </div> -->
+        <!-- </div> -->
       </div>
     </div>
+
+    <script src="scripts/Checker.js"></script>
+    <script src="scripts/lesson-bunny.js"></script>
   </body>
 </html>
