adding head body arms and feet portion of lesson

--- a/src/Projects/Bunny/index.html
+++ b/src/Projects/Bunny/index.html
@@ -21,16 +21,16 @@
           </div>
           <div class="mouth"></div>
         </div>
-        <!-- <div class="body"> -->
-        <!-- <div class="arms"> -->
-        <!-- <div class="arm-left"></div> -->
-        <!-- <div class="arm-right"></div> -->
-        <!-- </div> -->
-        <!-- <div class="feet"> -->
-        <!-- <div class="foot-left"></div> -->
-        <!-- <div class="foot-right"></div> -->
-        <!-- </div> -->
-        <!-- </div> -->
+        <div class="body">
+          <div class="arms">
+            <div class="arm-left"></div>
+            <div class="arm-right"></div>
+          </div>
+          <div class="feet">
+            <div class="foot-left"></div>
+            <div class="foot-right"></div>
+          </div>
+        </div>
       </div>
     </div>
 
