cleaning up start file for bunny

--- a/src/Projects/Bunny/index.html
+++ b/src/Projects/Bunny/index.html
@@ -8,31 +8,7 @@
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
-    <div class="wrapper">
-      <div class="bunny">
-        <div class="ears">
-          <div class="ear-left"></div>
-          <div class="ear-right"></div>
-        </div>
-        <div class="head">
-          <div class="eyes">
-            <div class="eye-left"></div>
-            <div class="eye-right"></div>
-          </div>
-          <div class="mouth"></div>
-        </div>
-        <div class="body">
-          <div class="arms">
-            <div class="arm-left"></div>
-            <div class="arm-right"></div>
-          </div>
-          <div class="feet">
-            <div class="foot-left"></div>
-            <div class="foot-right"></div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div class="wrapper"></div>
 
     <script src="scripts/Checker.js"></script>
     <script src="scripts/lesson-bunny.js"></script>
