--- a/src/Projects/Owl/index.html
+++ b/src/Projects/Owl/index.html
@@ -35,5 +35,8 @@
         <div class="shadow"></div>
       </div>
     </div>
+
+    <script src="scripts/Checker.js"></script>
+    <script src="scripts/lesson-owl.js"></script>
   </body>
 </html>
