--- a/src/Projects/Owl/index.html
+++ b/src/Projects/Owl/index.html
@@ -8,33 +8,7 @@
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
-    <div class="wrapper">
-      <div class="owl">
-        <div class="ear-left"></div>
-        <div class="ear-right"></div>
-        <div class="eyes">
-          <div class="eye eye-left">
-            <div class="eye-inner"></div>
-          </div>
-          <div class="eye eye-right">
-            <div class="eye-inner"></div>
-          </div>
-        </div>
-        <div class="beak"></div>
-        <div class="body">
-          <div class="dot-1"></div>
-          <div class="dot-2"></div>
-          <div class="dot-3"></div>
-          <div class="dot-4"></div>
-          <div class="dot-5"></div>
-        </div>
-        <div class="feet">
-          <div class="foot-left"></div>
-          <div class="foot-right"></div>
-        </div>
-        <div class="shadow"></div>
-      </div>
-    </div>
+    <div class="wrapper"></div>
 
     <script src="scripts/Checker.js"></script>
     <script src="scripts/lesson-owl.js"></script>
