updating inline style checker

--- a/src/Projects/CSS01/index.html
+++ b/src/Projects/CSS01/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <h1>CSS</h1>
+      <h1 style="color: #ff0000">CSS</h1>
     </div>
 
     <script src="scripts/Checker.js"></script>
