--- a/src/Projects/BeginnerCSS/CSS01/index.html
+++ b/src/Projects/BeginnerCSS/CSS01/index.html
@@ -9,7 +9,23 @@
   </head>
   <body>
     <div class="wrapper">
-      <h1 style="color: #ff0000">CSS</h1>
+      <h1>Welcome to CSS</h1>
+      <div class="boxes">
+        <div class="box1">Box 1</div>
+        <div class="box2">Box 2</div>
+        <div class="box3">Box 3</div>
+        <div class="box4">Box 4</div>
+      </div>
+      <div class="buttons">
+        <a href="#" class="button1">Normal Link</a>
+        <a href="#" class="button2">Special Button</a>
+        <a href="#" class="button3">Super Special Button</a>
+      </div>
+      <div class="texts">
+        <p class="text1">Just an normal paragraph.</p>
+        <h5 class="text2">A simple sub heading</h5>
+        <div class="text3">Please do not put text in a div.</div>
+      </div>
     </div>
 
     <script src="scripts/Checker.js"></script>
