making progress on spiderverse

--- a/src/Projects/BeginnerCSS/MoviesList/spiderverse.html
+++ b/src/Projects/BeginnerCSS/MoviesList/spiderverse.html
@@ -22,7 +22,8 @@
           />
         </div>
         <div class="description">
-          <h1 class="title">Spider-Man: Into the Spider verse</h1>
+          <h1 class="title">Spider-Man: Into the Spider-verse.</h1>
+          <a href="/" class="button">Back Home</a>
           <p>
             Teenager Miles Morales struggles to live up to the expectations of his father, police officer Jefferson
             Davis, who sees Spider-Man as a menace. Miles transfers to a boarding school, but later sneaks out and goes
