--- a/src/Projects/BeginnerCSS/MoviesList/index.html
+++ b/src/Projects/BeginnerCSS/MoviesList/index.html
@@ -35,7 +35,7 @@
           <div class="movie_details">
             <h2 class="movie_title">Incredibles 2</h2>
             <p class="movie_desc">Best movie ever!</p>
-            <a href="#" class="movie_link">Read More</a>
+            <a href="incredibles2.html" class="movie_link">Read More</a>
           </div>
         </div>
         <div id="teentitans" class="movie">
