adding spiderverse lesson

--- a/src/Projects/BeginnerCSS/MoviesList/incredibles2.html
+++ b/src/Projects/BeginnerCSS/MoviesList/incredibles2.html
@@ -96,5 +96,8 @@
         </div>
       </div>
     </div>
+
+    <script src="scripts/Checker.js"></script>
+    <script src="scripts/incredibles2.js"></script>
   </body>
 </html>
