--- a/src/Projects/BeginnerCSS/MoviesList/ralph.html
+++ b/src/Projects/BeginnerCSS/MoviesList/ralph.html
@@ -85,5 +85,8 @@
         </div>
       </div>
     </div>
+
+    <script src="scripts/Checker.js"></script>
+    <script src="scripts/ralph.js"></script>
   </body>
 </html>
