--- a/src/Projects/BeginnerCSS/MoviesList/spiderverse.html
+++ b/src/Projects/BeginnerCSS/MoviesList/spiderverse.html
@@ -99,5 +99,8 @@
         </div>
       </div>
     </div>
+
+    <script src="scripts/Checker.js"></script>
+    <script src="scripts/spiderverse.js"></script>
   </body>
 </html>
