--- a/src/Projects/BeginnerCSS/MoviesList/spiderverse-finish.html
+++ b/src/Projects/BeginnerCSS/MoviesList/spiderverse-finish.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>My Favorite Movies</title>
-    <link rel="stylesheet" href="styles/spiderverse.css" />
+    <link rel="stylesheet" href="styles/spiderverse-finish.css" />
   </head>
 
   <body>
