--- a/src/Projects/BeginnerCSS/Megaman/index-finish.html
+++ b/src/Projects/BeginnerCSS/Megaman/index-finish.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Megaman</title>
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/styles-finish.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -54,7 +54,5 @@
     </div>
 
     <script src="scripts/main.js"></script>
-    <script src="scripts/Checker.js"></script>
-    <script src="scripts/megaman.js"></script>
   </body>
 </html>
