making good progress on lesson builder

--- a/src/Projects/BeginnerHTML/Avatar/index-finish.html
+++ b/src/Projects/BeginnerHTML/Avatar/index-finish.html
@@ -10,7 +10,9 @@
 
   <body>
     <div class="wrapper">
-      <div class="header"><h1>Avatar: The Last Airbender</h1></div>
+      <div id="header" class="header">
+        <h1>Avatar: The Last <span>Airbender</span></h1>
+      </div>
       <div class="characters">
         <div id="aang" class="character">
           <a href="#"> <img src="images/aang.png" alt="" class="character_img" /> </a>
@@ -52,5 +54,7 @@
         </div>
       </div>
     </div>
+
+    <script src="scripts/LessonBuilder.js"></script>
   </body>
 </html>
