--- a/src/Projects/BeginnerHTML/BasicRobot/index-finish.html
+++ b/src/Projects/BeginnerHTML/BasicRobot/index-finish.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Basic Robot</title>
-    <link rel="stylesheet" href="styles/styles.css"/>
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
 
   <body>
     <div class="wrapper">
+      <!-- step -->
       <div class="robot">
+        <!-- step -->
         <div class="antenna"></div>
+        <!-- step -->
         <div class="head">
-          <div class="eye-left"></div>
-          <div class="eye-right"></div>
-          <div class="mouth"></div>
+          <!-- sub-step -->
+          <span class="eye-left"></span>
+          <!-- sub-step -->
+          <span class="eye-right"></span>
+          <!-- sub-step -->
+          <span class="mouth"></span>
         </div>
+        <!-- step -->
         <div class="body">
+          <!-- sub-step -->
           <div class="arm-left"></div>
+          <!-- sub-step -->
           <div class="arm-right"></div>
+          <!-- sub-step -->
           <div class="bolt"></div>
         </div>
+        <!-- step -->
         <div class="bottom"></div>
       </div>
     </div>
-
+    <script src="scripts/LessonBuilder.js"></script>
   </body>
 </html>
