--- a/src/Projects/BeginnerHTML/Bunny/index-finish.html
+++ b/src/Projects/BeginnerHTML/Bunny/index-finish.html
@@ -9,29 +9,46 @@
   </head>
   <body>
     <div class="wrapper">
+      <!-- step -->
       <div class="bunny">
+        <!-- step -->
         <div class="ears">
-          <div class="ear-left"></div>
-          <div class="ear-right"></div>
+          <!-- sub-step -->
+          <span class="ear-left"></span>
+          <!-- sub-step -->
+          <span class="ear-right"></span>
         </div>
+        <!-- step -->
         <div class="head">
+          <!-- step -->
           <div class="eyes">
-            <div class="eye-left"></div>
-            <div class="eye-right"></div>
+            <!-- sub-step -->
+            <span class="eye-left"></span>
+            <!-- sub-step -->
+            <span class="eye-right"></span>
           </div>
+          <!-- step -->
           <div class="mouth"></div>
         </div>
+        <!-- step -->
         <div class="body">
+          <!-- step -->
           <div class="arms">
-            <div class="arm-left"></div>
-            <div class="arm-right"></div>
+            <!-- sub-step -->
+            <span class="arm-left"></span>
+            <!-- sub-step -->
+            <span class="arm-right"></span>
           </div>
+          <!-- step -->
           <div class="feet">
-            <div class="foot-left"></div>
-            <div class="foot-right"></div>
+            <!-- sub-step -->
+            <span class="foot-left"></span>
+            <!-- sub-step -->
+            <span class="foot-right"></span>
           </div>
         </div>
       </div>
     </div>
+    <script src="scripts/LessonBuilder.js"></script>
   </body>
 </html>
