--- a/src/Projects/BeginnerHTML/MoviesList/index-finish.html
+++ b/src/Projects/BeginnerHTML/MoviesList/index-finish.html
@@ -1,68 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>My Favorite Movies</title>
-    <link rel="stylesheet" href="styles/styles.css"/>
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
 
   <body>
     <div class="wrapper">
-      <div class="header">
+      <!-- step -->
+      <div id="headerasd" class="header">
+        <!-- sub-step -->
         <h1>These are my favorite movies</h1>
       </div>
+      <!-- step -->
       <div class="movies">
-        <div id="spiderverse" class="movie">
-          <img src="images/spiderverse.jpg" alt="" class="movie_image"/>
-          <div class="movie_details">
-            <h2 class="movie_title">Spiderverse</h2>
-            <p class="movie_desc">Best movie ever!</p>
-            <a href="spiderverse.html" class="movie_link">Read More</a>
+        <!-- sub-step -->
+        <div class="movies__inner">
+          <!-- step -->
+          <div id="spiderverse" class="movie">
+            <!-- sub-step -->
+            <img src="images/spiderverse.jpg" alt="" class="movie_image" />
+            <!-- sub-step -->
+            <div class="movie_details">
+              <!-- sub-step -->
+              <h2 class="movie_title">Spiderverse</h2>
+              <!-- sub-step -->
+              <p class="movie_desc">Best movie ever!</p>
+              <!-- sub-step -->
+              <a href="spiderverse.html" class="movie_link">Read More</a>
+            </div>
           </div>
-        </div>
-        <div id="ralph" class="movie">
-          <img src="images/ralph.jpg" alt="" class="movie_image"/>
-          <div class="movie_details">
-            <h2 class="movie_title">Ralph Breaks the Internet</h2>
-            <p class="movie_desc">Best movie ever!</p>
-            <a href="#" class="movie_link">Read More</a>
+          <!-- step -->
+          <div id="ralph" class="movie">
+            <!-- sub-step -->
+            <img src="images/ralph.jpg" alt="" class="movie_image" />
+            <!-- sub-step -->
+            <div class="movie_details">
+              <!-- sub-step -->
+              <h2 class="movie_title">Ralph Breaks the Internet</h2>
+              <!-- sub-step -->
+              <p class="movie_desc">Best movie ever!</p>
+              <!-- sub-step -->
+              <a href="#" class="movie_link">Read More</a>
+            </div>
           </div>
-        </div>
-        <div id="incredibles2" class="movie">
-          <img src="images/incredibles2.jpg" alt="" class="movie_image"/>
-          <div class="movie_details">
-            <h2 class="movie_title">Incredibles 2</h2>
-            <p class="movie_desc">Best movie ever!</p>
-            <a href="#" class="movie_link">Read More</a>
-          </div>
-        </div>
-        <div id="teentitans" class="movie">
-          <img src="images/teentitans.jpg" alt="" class="movie_image"/>
-          <div class="movie_details">
-            <h2 class="movie_title">Teen Titans Go! to the Movies</h2>
-            <p class="movie_desc">Best movie ever!</p>
-            <a href="#" class="movie_link">Read More</a>
-          </div>
-        </div>
-        <div id="peterrabbit" class="movie">
-          <img src="images/peterrabbit.jpg" alt="" class="movie_image"/>
-          <div class="movie_details">
-            <h2 class="movie_title">Peter Rabbit</h2>
-            <p class="movie_desc">Best movie ever!</p>
-            <a href="#" class="movie_link">Read More</a>
-          </div>
-        </div>
-        <div id="titobirds" class="movie">
-          <img src="images/titobirds.jpg" alt="" class="movie_image"/>
-          <div class="movie_details">
-            <h2 class="movie_title">Tito and the Birds</h2>
-            <p class="movie_desc">Best movie ever!</p>
-            <a href="#" class="movie_link">Read More</a>
+          <!-- step -->
+          <div class="onemore">
+            <!-- sub-step -->
+            <div id="incredibles2" class="movie">
+              <img src="images/incredibles2.jpg" alt="" class="movie_image" />
+              <!-- sub-step -->
+              <div class="movie_details">
+                <h2 class="movie_title">Incredibles 2</h2>
+                <p class="movie_desc">Best movie ever!</p>
+                <a href="#" class="movie_link">Read More</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
+      <!-- step -->
+      <footer class="footer">
+        <!-- sub-step -->
+        <h2>The end</h2>
+      </footer>
     </div>
+
+    <script src="scripts/LessonBuilder.js"></script>
   </body>
 </html>
